--- a/application/index/view/Layouts/footer.html
+++ b/application/index/view/Layouts/footer.html
@@ -12,7 +12,7 @@
                     <div class="main_footer_bottom last_span">
                        <p> 
                         {foreach name="data.blogrollData" item="v" key="k"}
-                        <a href="{$v.cname_link}">{$v.cname}</a> <span>-</span>
+                        <a href="{$v.cname_link}" target="_blank">{$v.cname}</a> <span>-</span>
                         {/foreach}
                         </p>
                     </div>
