--- a/application/index/view/sitemap/sitemap.html
+++ b/application/index/view/sitemap/sitemap.html
@@ -14,7 +14,7 @@
 			<div class="map_content">
 				<ul>
 					{foreach name="$v" item="vv" key="kk"}
-					<li><a href="{$vv}">{$vv}</a></li>
+					<li><a href="{$vv}" target="_blank">{$vv}</a></li>
 					{/foreach}
 				</ul>
 			</div>
