--- a/application/index/view/Websitewap/websitewap.html
+++ b/application/index/view/Websitewap/websitewap.html
@@ -4,7 +4,7 @@
     {css href="/static/index/websitewap/css/websitewap.css" /}
 <div class="main_topnav">
 	<div class="mainwd">
-		<p>您的位置 : <a href="/index/index">首页</a>><a href="#">招生公告</a></p>
+		<p>您的位置 : <a href="/Index/index" target="_blank">首页</a>><a href="#">招生公告</a></p>
 	</div>
 </div>
 <div class="container">
