--- a/public/static/index/message/css/message.css
+++ b/public/static/index/message/css/message.css
@@ -8,3 +8,9 @@
 .item_list .item_list_con{width: 78%;margin-left: 20px;}
 .item_list_con_time{color: #999;}
 .textC{text-align: center;}
+
+
+.message_body_list{border-bottom: 1px  dashed #e3e3e3;text-align: left;position: relative;}
+.message_body_list .div_time{position: absolute;top:0;right: 0;}
+.message_body_list .oneBox_body_list_bd a p{max-width: 700px;}
+
