--- a/application/admin/view/programa/index.html
+++ b/application/admin/view/programa/index.html
@@ -57,7 +57,7 @@
                   {/if}
                   {if condition="($Think.session.adminUser.type eq 0 || $data.permissionsData && in_array($v.id,$data.permissionsData.pid))"}
                   <button type="button" class="btn btn-primary btn-xs" onclick="sonList({$v.id});">子级列表</button>
-                  {if condition="($v.type neq 0 && $v.type neq 1 && $v.type neq 2)"}
+                  {if condition="($v.type neq 0 && $v.type neq 1 && $v.type neq 2 || $v.pid neq 0)"}
                   <button type="button" class="btn btn-primary btn-xs" onclick="issue({$v.id},{$v.type});">发布文章</button>
                   <button type="button" class="btn btn-primary btn-xs" onclick="aList({$v.id});">文章列表</button>
                   {/if}
