--- a/application/index/view/sitemap/aboutUs.html
+++ b/application/index/view/sitemap/aboutUs.html
@@ -4,7 +4,10 @@
     {css href="/static/index/websitewap/css/websitewap.css" /}
 <div class="main_topnav">
 	<div class="mainwd">
-		<p>您的位置 : <a href="/Index/index" target="_blank">首页</a>><a href="#">关于我们</a></p>
+		<ol class="breadcrumb">
+		  <li><a href="/Index/index">首页</a></li>
+		  <li class="active">关于我们</li>
+		</ol>
 	</div>
 </div>
 <div class="container">
