--- a/public/static/app/index/css/index.css
+++ b/public/static/app/index/css/index.css
@@ -8,3 +8,4 @@
 .pad10{padding:.25rem  .5rem;}
 .weui-media-box__desc{line-height: 1.6;}
 .whiteSpace{white-space: normal;line-height: 1.6;}
+.btn_submit{font-size: 14px;background-color: #fff;border:0;}
