--- a/public/static/app/message/css/message.css
+++ b/public/static/app/message/css/message.css
@@ -5,3 +5,4 @@
 .message  p.weui-media-box__desc{margin: 0;}
 .message  p.weui-media-box__desc span{margin-right: .25rem;}
 .message .weui-panel__ft{text-align: center;}
+.btn_submit{font-size: 14px;background-color: #fff;border:0;}
