--- a/application/app/view/index/index.html
+++ b/application/app/view/index/index.html
@@ -3,159 +3,143 @@
     <!-- 当前页面css -->
     {css href="/static/app/index/css/index.css" /}
 <div class="container">
-	  <div class="weui-search-bar" id="searchBar">
-	  	<form class="weui-search-bar__form">
+	<div class="weui-search-bar" id="searchBar">
+	  	<form class="weui-search-bar__form" action="/Base/search" method="POST">
 	    	<div class="weui-search-bar__box">
 	      		<i class="weui-icon-search"></i>
-	      		<input type="search" class="weui-search-bar__input" id="searchInput" placeholder="搜索" required="">
+	      		<input type="text" class="weui-search-bar__input"  placeholder="搜索" name="search">
 	      	<a href="javascript:" class="weui-icon-clear" id="searchClear"></a>
 	    	</div>
 	    	<label class="weui-search-bar__label" id="searchText">
 	      		<i class="weui-icon-search"></i>
-	      		<span>搜索</span>
+	      		<input type="submit" value="搜索" class="btn_submit">
 	   		</label>
-	  </form>
+	  	</form>
 	  <a href="javascript:" class="weui-search-bar__cancel-btn" id="searchCancel">取消</a>
 	</div>
+
+	{if $data.announcementData}
 	<div class="weui-panel weui-panel_access ">
 	  <div class="weui-panel__hd ">
-	  	<span>热点关注</span>
-	  	<a href="/app/message/message">进入栏目></a>
-	  </div>
-	  	<div class="weui-panel__bd">
-		    <a href="javascript:void(0);" class="weui-media-box weui-media-box_appmsg">
-		      <div class="weui-media-box__hd">
-		        <img class="weui-media-box__thumb" src="/static/images/icon.png">
-		      </div>
-		      <div class="weui-media-box__bd">
-		        <h4 class="weui-media-box__title whiteSpace">重庆地质大学(武汉)2018年接收推免生章程</h4>
-		      </div>
-		    </a>
-		    <a href="javascript:void(0);" class="weui-media-box weui-media-box_appmsg pad10">
-		      <div class="yd">·</div>
-		      <div class="weui-media-box__bd">
-		        <h4 class="weui-media-box__title">重庆地质大学(武汉)2018年接收推免生章程重庆地质大学(武汉)2018年接收推免生章程</h4>
-		      </div>
-		    </a>
-		    <a href="javascript:void(0);" class="weui-media-box weui-media-box_appmsg pad10">
-		      <div class="yd">·</div>
-		      <div class="weui-media-box__bd">
-		        <h4 class="weui-media-box__title">重庆地质大学(武汉)2018年接收推免生章程重庆地质大学(武汉)2018年接收推免生章程</h4>
-		      </div>
-		    </a>
-		    <a href="javascript:void(0);" class="weui-media-box weui-media-box_appmsg pad10">
-		      <div class="yd">·</div>
-		      <div class="weui-media-box__bd">
-		        <h4 class="weui-media-box__title">重庆地质大学(武汉)2018年接收推免生章程重庆地质大学(武汉)2018年接收推免生章程</h4>
-		      </div>
-		    </a>
-	  	</div>
-	</div>
-	<div class="weui-panel weui-panel_access">
-	  <div class="weui-panel__hd">
 	  	<span>招考公告</span>
-	  	<a href="#">进入栏目></a>
+	  	<a href="/app/Message/message?type=4">进入栏目></a>
 	  </div>
 	  	<div class="weui-panel__bd">
-		    <a href="javascript:void(0);" class="weui-media-box weui-media-box_appmsg">
+	  		{foreach name="data.announcementData" item="v" key="k"}
+		    <a href="/app/Message/message?pid={$v.pid}&paid={$v.id}" class="weui-media-box weui-media-box_appmsg">
 		      <div class="weui-media-box__hd">
-		        <img class="weui-media-box__thumb" src="/static/images/icon.png">
+		        <img class="weui-media-box__thumb" src="{$v.cover_path}">
 		      </div>
 		      <div class="weui-media-box__bd">
-		        <h4 class="weui-media-box__title">重庆地质大学</h4>
-		        <p class="weui-media-box__desc">重庆地质大学(武汉)2018年接收推免生章程重庆地质大学(武汉)2018年接收推免生章程</p>
+		        <h4 class="weui-media-box__title whiteSpace">{$v.title}</h4>
 		      </div>
 		    </a>
-		    <a href="javascript:void(0);" class="weui-media-box weui-media-box_appmsg pad10">
-		      <div class="yd">·</div>
-		      <div class="weui-media-box__bd">
-		        <h4 class="weui-media-box__title">重庆地质大学(武汉)2018年接收推免生章程重庆地质大学(武汉)2018年接收推免生章程</h4>
-		      </div>
-		    </a>
-		    <a href="javascript:void(0);" class="weui-media-box weui-media-box_appmsg pad10">
-		      <div class="yd">·</div>
-		      <div class="weui-media-box__bd">
-		        <h4 class="weui-media-box__title">重庆地质大学(武汉)2018年接收推免生章程重庆地质大学(武汉)2018年接收推免生章程</h4>
-		      </div>
-		    </a>
-		    <a href="javascript:void(0);" class="weui-media-box weui-media-box_appmsg pad10">
-		      <div class="yd">·</div>
-		      <div class="weui-media-box__bd">
-		        <h4 class="weui-media-box__title">重庆地质大学(武汉)2018年接收推免生章程重庆地质大学(武汉)2018年接收推免生章程</h4>
-		      </div>
-		    </a>
+		   {/foreach} 
 	  	</div>
 	</div>
+	{/if}
+	{if $data.recommendData}
 	<div class="weui-panel weui-panel_access">
 	  <div class="weui-panel__hd">
-	  	<span>活动预告</span>
-	  	<a href="#">进入栏目></a>
+	  	<span>院校推荐</span>
+	  	<a href="/app/Message/message">进入栏目></a>
 	  </div>
 	  	<div class="weui-panel__bd">
-		    <a href="javascript:void(0);" class="weui-media-box weui-media-box_appmsg">
+		    {foreach name="data.recommendData" item="v" key="k"}
+		    <a href="/app/Message/message?pid={$v.pid}&paid={$v.id}" class="weui-media-box weui-media-box_appmsg">
 		      <div class="weui-media-box__hd">
-		        <img class="weui-media-box__thumb" src="/static/images/icon.png">
+		        <img class="weui-media-box__thumb" src="{$v.cover_path}">
 		      </div>
 		      <div class="weui-media-box__bd">
-		        <h4 class="weui-media-box__title">重庆地质大学</h4>
-		        <p class="weui-media-box__desc">重庆地质大学(武汉)2018年接收推免生章程重庆地质大学(武汉)2018年接收推免生章程</p>
+		        <h4 class="weui-media-box__title whiteSpace">{$v.title}</h4>
 		      </div>
 		    </a>
-		    <a href="javascript:void(0);" class="weui-media-box weui-media-box_appmsg pad10">
-		      <div class="yd">·</div>
-		      <div class="weui-media-box__bd">
-		        <h4 class="weui-media-box__title">重庆地质大学(武汉)2018年接收推免生章程重庆地质大学(武汉)2018年接收推免生章程</h4>
-		      </div>
-		    </a>
-		    <a href="javascript:void(0);" class="weui-media-box weui-media-box_appmsg pad10">
-		      <div class="yd">·</div>
-		      <div class="weui-media-box__bd">
-		        <h4 class="weui-media-box__title">重庆地质大学(武汉)2018年接收推免生章程重庆地质大学(武汉)2018年接收推免生章程</h4>
-		      </div>
-		    </a>
-		    <a href="javascript:void(0);" class="weui-media-box weui-media-box_appmsg pad10">
-		      <div class="yd">·</div>
-		      <div class="weui-media-box__bd">
-		        <h4 class="weui-media-box__title">重庆地质大学(武汉)2018年接收推免生章程重庆地质大学(武汉)2018年接收推免生章程</h4>
-		      </div>
-		    </a>
+		   {/foreach}
 	  	</div>
 	</div>
+	{/if}
+	{if $data.hotData}
 	<div class="weui-panel weui-panel_access">
 	  <div class="weui-panel__hd">
-	  	<span>活动预告</span>
-	  	<a href="#">进入栏目></a>
+	  	<span>MBA热点关注</span>
+	  	<a href="/app/Message/message">进入栏目></a>
 	  </div>
 	  	<div class="weui-panel__bd">
-		    <a href="javascript:void(0);" class="weui-media-box weui-media-box_appmsg">
+		    {foreach name="data.hotData" item="v" key="k"}
+		    <a href="/app/Message/message?pid={$v.pid}&paid={$v.id}" class="weui-media-box weui-media-box_appmsg">
 		      <div class="weui-media-box__hd">
-		        <img class="weui-media-box__thumb" src="/static/images/icon.png">
+		        <img class="weui-media-box__thumb" src="{$v.cover_path}">
 		      </div>
 		      <div class="weui-media-box__bd">
-		        <h4 class="weui-media-box__title">重庆地质大学</h4>
-		        <p class="weui-media-box__desc">重庆地质大学(武汉)2018年接收推免生章程重庆地质大学(武汉)2018年接收推免生章程</p>
+		        <h4 class="weui-media-box__title whiteSpace">{$v.title}</h4>
 		      </div>
 		    </a>
-		    <a href="javascript:void(0);" class="weui-media-box weui-media-box_appmsg pad10">
-		      <div class="yd">·</div>
-		      <div class="weui-media-box__bd">
-		        <h4 class="weui-media-box__title">重庆地质大学(武汉)2018年接收推免生章程重庆地质大学(武汉)2018年接收推免生章程</h4>
-		      </div>
-		    </a>
-		    <a href="javascript:void(0);" class="weui-media-box weui-media-box_appmsg pad10">
-		      <div class="yd">·</div>
-		      <div class="weui-media-box__bd">
-		        <h4 class="weui-media-box__title">重庆地质大学(武汉)2018年接收推免生章程重庆地质大学(武汉)2018年接收推免生章程</h4>
-		      </div>
-		    </a>
-		    <a href="javascript:void(0);" class="weui-media-box weui-media-box_appmsg pad10">
-		      <div class="yd">·</div>
-		      <div class="weui-media-box__bd">
-		        <h4 class="weui-media-box__title">重庆地质大学(武汉)2018年接收推免生章程重庆地质大学(武汉)2018年接收推免生章程</h4>
-		      </div>
-		    </a>
+		   {/foreach}
 	  	</div>
 	</div>
+	{/if}
+		{if $data.foreshowData}
+	<div class="weui-panel weui-panel_access">
+	  <div class="weui-panel__hd">
+	  	<span>MBA活动预告</span>
+	  	{foreach name="data.foreshowData" item="v" key="k"}
+	  	<a href="/app/Message/message?pid={$v.pid}">进入栏目></a>
+	  	{/foreach}
+	  </div>
+	  	<div class="weui-panel__bd">
+		    {foreach name="data.foreshowData" item="v" key="k"}
+		    <a href="/app/Message/message?pid={$v.pid}&paid={$v.id}" class="weui-media-box weui-media-box_appmsg">
+		      <div class="weui-media-box__hd">
+		        <img class="weui-media-box__thumb" src="{$v.cover_path}">
+		      </div>
+		      <div class="weui-media-box__bd">
+		        <h4 class="weui-media-box__title whiteSpace">{$v.title}</h4>
+		      </div>
+		    </a>
+		   {/foreach}
+	  	</div>
+	</div>
+	{/if}
+	{if $data.recruitData}
+	<div class="weui-panel weui-panel_access">
+	  <div class="weui-panel__hd">
+	  	<span>招生咨询</span>
+	  	<a href="/app/Message/message">进入栏目></a>
+	  </div>
+	  	<div class="weui-panel__bd">
+		    {foreach name="data.recruitData" item="v" key="k"}
+		    <a href="/app/Message/message?pid={$v.pid}&paid={$v.id}" class="weui-media-box weui-media-box_appmsg">
+		      <div class="weui-media-box__hd">
+		        <img class="weui-media-box__thumb" src="{$v.cover_path}">
+		      </div>
+		      <div class="weui-media-box__bd">
+		        <h4 class="weui-media-box__title whiteSpace">{$v.title}</h4>
+		      </div>
+		    </a>
+		   {/foreach}
+	  	</div>
+	</div>
+	{/if}
+	{if $data.examData}
+	<div class="weui-panel weui-panel_access">
+	  	<div class="weui-panel__hd">
+	  		<span>考试资讯</span>
+	  		<a href="/app/Message/message">进入栏目></a>
+	  	</div>
+	  <div class="weui-panel__bd">
+	    {foreach name="data.recruitData" item="v" key="k"}
+	    <a href="/app/Message/message?pid={$v.pid}&paid={$v.id}" class="weui-media-box weui-media-box_appmsg">
+	      <div class="weui-media-box__hd">
+	        <img class="weui-media-box__thumb" src="{$v.cover_path}">
+	      </div>
+	      <div class="weui-media-box__bd">
+	        <h4 class="weui-media-box__title whiteSpace">{$v.title}</h4>
+	      </div>
+	    </a>
+	   {/foreach}
+	  </div>
+	</div>
+	{/if}
 </div>
 
 
