--- a/application/index/view/Index/index.html
+++ b/application/index/view/Index/index.html
@@ -10,27 +10,21 @@
 			<!-- 重庆MBA热点关注 -->
 
 			<div class="oneBox_left col-md-3">
-				{if $data.programaData}
-					{foreach name="data.programaData" item="v" key="k"}
-					{if condition="($k == 3)"}
 				<div class="oneBox_title">
-					<span class="oneBox_title_bd">{$v.cname}</span>
-					<a href="/Message/message?pid={$v.id}" class="rt" target="_blank">更多></a>
+					<span class="oneBox_title_bd">重庆MBA热点关注</span>
+					<a href="/Message/message?type=3" class="rt" target="_blank">更多></a>
 				</div>
-				{/if}
-				{/foreach}
-				{/if}
+				
 				<div class="oneBox_body">
 					{if $data.hotData}
 						{foreach name="data.hotData" item="v" key="k"}
 					<div class="oneBox_body_list">
 						<div class="yd">·</div>
-						<div class="oneBox_body_list_bd"><a href="/Websitewap/websitewap?paid={$v.id}" target="_blank">{$v.title}</a></div>
+						<div class="oneBox_body_list_bd"><a href="/Websitewap/websitewap?type={$v.type}&paid={$v.id}" target="_blank">{$v.title}</a></div>
 					</div>
 					{/foreach}
 					{/if}
 				</div>
-			
 			</div>
 			<!-- 幻灯片 -->
 			<div class="oneBox_center col-md-6">
@@ -74,16 +68,10 @@
 		<div class="oneBox row second">
 			<!-- 2L-左 重庆MBA 活动预告 -->
 			<div class="col-md-3 oneBox_left">
-				{if $data.programaData}
-					{foreach name="data.programaData" item="v" key="k"}
-					{if condition="($k == 5)"}
 				<div class="oneBox_title">
-					<span class="oneBox_title_bd">{$v.cname}</span>
+					<span class="oneBox_title_bd">重庆MBA活动预告</span>
 					<a href="/Message/message?pid={$v.id}" class="rt" target="_blank">更多></a>
 				</div>
-				{/if}
-				{/foreach}
-				{/if}
 				<div class="oneBox_title_img">
 					<!-- 此处为广告位置 -->
 					{if $data.ad_foreshowData}
@@ -94,7 +82,7 @@
 					{if $data.foreshowData}
 					{foreach name="data.foreshowData" item="v" key="k"}
 					<div class="secondLeft_list">
-						<a href="/Websitewap/websitewap?paid={$v.id}" target="_blank">
+						<a href="/Websitewap/websitewap?pid={$v.pid}&paid={$v.id}" target="_blank">
 							<div class="secondLeft_list_img lt">
 								<p>{$v.ctime|date="m",###}月</p>
 								<p>{$v.ctime|date="d",###}日</p>
@@ -118,7 +106,7 @@
 					{if condition="($k == 7)"}
 					<div class="oneBox_title">
 						<span class="oneBox_title_bd">{$v.cname}</span>
-						<a href="/Message/message?pid={$v.id}&cname={$v.cname}" class="rt" target="_blank">更多></a>
+						<a href="/Message/message?pid={$v.id}" class="rt" target="_blank">更多></a>
 					</div>
 					{/if}
 					{/foreach}
@@ -129,7 +117,7 @@
 								{foreach name="data.recruitData" item="v" key="k"}
 								{if condition="($k == 0)"}
 							<div class="weui-media-box weui-media-box_text pad0">
-								<a href="/Websitewap/websitewap?paid={$v.id}" target="_blank">
+								<a href="/Websitewap/websitewap?pid={$v.pid}&paid={$v.id}" target="_blank">
 								  	<h2 class="oneBox_body_list_title">{$v.title}</h2>
 								  	<div class="weui-media-box__desc">{$v.tips}</div>
 								</a>
@@ -137,7 +125,7 @@
 							{else /}	
 							<div class="oneBox_body_list">
 									<div class="yd">·</div>
-									<div class="oneBox_body_list_bd"><a href="/Websitewap/websitewap?paid={$v.id}" target="_blank">{$v.title}</a></div>
+									<div class="oneBox_body_list_bd"><a href="/Websitewap/websitewap?pid={$v.pid}&paid={$v.id}" target="_blank">{$v.title}</a></div>
 							</div>
 							{/if}
 							{/foreach}
@@ -163,7 +151,7 @@
 								{foreach name="data.examData" item="v" key="k"}
 								{if condition="($k == 0)"}
 							<div class="weui-media-box weui-media-box_text pad0">
-								<a href="/Websitewap/websitewap?paid={$v.id}" target="_blank">
+								<a href="/Websitewap/websitewap?pid={$v.pid}&paid={$v.id}" target="_blank">
 								  	<h2 class="oneBox_body_list_title">{$v.title}</h2>
 								  	<div class="weui-media-box__desc">{$v.tips}</div>
 								</a>
@@ -171,7 +159,7 @@
 							{else /}	
 							<div class="oneBox_body_list">
 									<div class="yd">·</div>
-									<div class="oneBox_body_list_bd"><a href="/Websitewap/websitewap?paid={$v.id}" target="_blank">{$v.title}</a></div>
+									<div class="oneBox_body_list_bd"><a href="/Websitewap/websitewap?pid={$v.pid}&paid={$v.id}" target="_blank">{$v.title}</a></div>
 							</div>
 							{/if}
 							{/foreach}
@@ -277,7 +265,7 @@
 						{foreach name="$vv.programa_articleData" item="vvv" key="kkk"}
 							{if $kkk == 0}
 						<div class="oneBox_body">
-							<a href="/Websitewap/websitewap?paid={$vvv.id}" class="weui-media-box weui-media-box_appmsg" target="_blank">
+							<a href="/Websitewap/websitewap?pid={$vvv.pid}&paid={$vvv.id}" class="weui-media-box weui-media-box_appmsg" target="_blank">
 							    <div class="weui-media-box__hd">
 							      <img class="weui-media-box__thumb" src="{$vvv.cover_path}">
 							    </div>
@@ -289,7 +277,7 @@
 						{else /}
 						<div class="oneBox_body_list">
 							<div class="yd">·</div>
-							<div class="oneBox_body_list_bd"><a href="/Websitewap/websitewap?paid={$vvv.id}" target="_blank">{$vvv.title}</a></div>
+							<div class="oneBox_body_list_bd"><a href="/Websitewap/websitewap?pid={$vvv.pid}&paid={$vvv.id}" target="_blank">{$vvv.title}</a></div>
 						</div>
 						{/if}
 						{/foreach}
@@ -383,14 +371,14 @@
 			<div class="col-md-4">
 					<div class="oneBox_title">
 							<span class="oneBox_title_bd">{$vv.cname}</span>
-							<a href="/Message/message?pid={$vv.id}" class="rt" target="_blank">更多></a>
+							<a href="/Message/message?pid={$vv.id}&cname={$vv.cname}" class="rt" target="_blank">更多></a>
 					</div>
 					<div class="oneBox_body">
 					<div class="oneBox_body_list_access">
 						{foreach name="$vv.programa_articleData" item="vvv" key="kkk"}
 							{if $kkk == 0}
 						<div class="oneBox_body">
-							<a href="/Websitewap/websitewap?paid={$vvv.id}" class="weui-media-box weui-media-box_appmsg" target="_blank">
+							<a href="/Websitewap/websitewap?pid={$vvv.pid}&paid={$vvv.id}" class="weui-media-box weui-media-box_appmsg" target="_blank">
 							    <div class="weui-media-box__hd">
 							      <img class="weui-media-box__thumb" src="{$vvv.cover_path}">
 							    </div>
@@ -402,7 +390,7 @@
 						{else /}
 						<div class="oneBox_body_list">
 							<div class="yd">·</div>
-							<div class="oneBox_body_list_bd"><a href="/Websitewap/websitewap?paid={$vvv.id}"
+							<div class="oneBox_body_list_bd"><a href="/Websitewap/websitewap?pid={$vvv.pid}&paid={$vvv.id}"
 							 target="_blank">{$vvv.title}</a></div>
 						</div>
 						{/if}
@@ -429,7 +417,7 @@
 				<div class="img3">
 					{if $data.ad_partnerData}
 					{foreach name="data.ad_partnerData" item="v" key="k"}
-					<a href="{$v.img_link}">
+					<a href="{$v.img_link}" target="_blank">
 						<img src="{$v.img_path}" class="lt" target="_blank">
 					</a>
 					{/foreach}
