--- a/application/index/view/Message/message.html
+++ b/application/index/view/Message/message.html
@@ -4,7 +4,17 @@
     {css href="/static/index/message/css/message.css" /}
 <div class="main_topnav">
 	<div class="mainwd">
-		<p>您的位置 : <a href="/index/index">首页</a>><a href="#">招生公告</a></p>
+		<!-- <p>您的位置 : <a href="/index/index">首页1</a>><a href="#" class="cname"></a></p> -->
+		<ol class="breadcrumb">
+		  <li><a href="/">首页</a></li>
+		  {if condition="($type neq 0 && $paid eq 0)"}
+		  <li class="active">{$data.programaCname}</li>
+		  {/if}
+		  {if condition="($paid && $type)"}
+		  <li><a href="/Message/message?type={$type}">{$data.programaCname}</a></li>
+		  <li class="active">{$data.programa_articleTitle}</li>
+		  {/if}
+		</ol>
 	</div>
 </div>
 <div class="container">
@@ -12,25 +22,32 @@
 	<!-- 左边列表样式 -->
 	<div class="left_aside lt">
 		{if $data.programa_articleData}
+		
 		<div class="oneBox_body">
 			
 			{foreach name="data.programa_articleData" item="v" key="k"}
 			<div class="oneBox_body_list message_body_list">
 				<div class="yd">·</div>
 					<div class="oneBox_body_list_bd">
-						<a href="/Websitewap/websitewap?paid={$v.id}" target="_blank">{$v.title}</a>
+						<a href="/Websitewap/websitewap?type={$v.type}&paid={$v.id}" target="_blank">{$v.title}</a>
 					</div>
 				<div class="div_time">{$v.ctime|date="Y-m-d",###}</div>
 			</div>
 			{/foreach}
 			
 		</div>
+		<!-- 分页 -->
 		{$data.programa_articleData->render()}
 
 		{else /}
-			<h2>暂无数据 ~~</h2>
+		<div class="oneBox_body">
+			<h3 style="text-align: center;">哎呀，没有数据！</h3>
+		</div>
+		
 		{/if}
 
+
+		
 	</div>
 	<!-- 引入公共右部样式 -->
 	{include file="layouts/right_aside" /}
