--- a/application/index/view/sitemap/sitemap.html
+++ b/application/index/view/sitemap/sitemap.html
@@ -12,9 +12,10 @@
 			{if $data.website_mapData}
 				{foreach name="data.website_mapData" item="v" key="k"}
 			<div class="map_content">
+				<h3>{$k}</h3>
 				<ul>
-					{foreach name="$v" item="vv" key="kk"}
-					<li><a href="{$vv}" target="_blank">{$vv}</a></li>
+					{foreach name="v" item="vv" key="kk"}
+					<li><a href="{$vv}" target="_blank">{$kk}</a></li>
 					{/foreach}
 				</ul>
 			</div>
