--- a/application/app/view/layouts/footer.html
+++ b/application/app/view/layouts/footer.html
@@ -4,9 +4,8 @@
 
 <div class="weui-footer">
   <p class="weui-footer__links">
-    <a href="javascript:void(0);" class="weui-footer__link">网站地图</a> 
-    <a href="javascript:void(0);" class="weui-footer__link">关于我们</a> 
-    <a href="javascript:void(0);" class="weui-footer__link">联系我们</a>
+    <a href="/app/Base/sitemap" class="weui-footer__link">网站地图</a> 
+    <a href="/app/Base/aboutUs" class="weui-footer__link">关于我们</a> 
   </p>
   <p class="weui-footer__text">Copyright © 2008-2017 </p>
 </div>
@@ -16,7 +15,7 @@
 <div class="sub_footer">
     <a href="javascript:;" class="weui-tabbar__item weui-bar__item--on">在线咨询</a>
     <a href="javascript:;" class="weui-tabbar__item">拨打电话</a>
-    <a href="/app/index/index" class="weui-tabbar__item">返回首页</a>
+    <a href="/app/Index/index" class="weui-tabbar__item">返回首页</a>
 </div>
 
 
