--- a/application/app/view/message/message.html
+++ b/application/app/view/message/message.html
@@ -4,8 +4,18 @@
     {css href="/static/app/message/css/message.css" /}
 
 <div class="container">
+	<div class="span6">
+            <ul class="breadcrumb">
+                <li>
+                    <a href="/app/index/index">首页</a>
+                </li>
+                {if condition="($pid)"}
+                  <li><a href="/app/Message/message?pid={$pid}">{$data.programaCname}</a></li>
+                  {/if}
+            </ul>
+    </div>
 	<div class="weui-search-bar" id="searchBar">
-		  <form class="weui-search-bar__form" action="/Base/search" method="POST">
+		  <form class="weui-search-bar__form" action="/app/Base/search" method="POST">
 		    <div class="weui-search-bar__box">
 		      <i class="weui-icon-search"></i>
 		      <input type="text" class="weui-search-bar__input" name="search" id="searchInput" placeholder="搜索" required="">
@@ -18,23 +28,22 @@
 		  </form>
 		  <a href="javascript:" class="weui-search-bar__cancel-btn" id="searchCancel">取消</a>
 	</div>
+	
 	<div class="weui-panel weui-panel_access message">
 	  	<div class="weui-panel__bd">
 	  		{if $data.programa_articleData}
 	  			{foreach name="data.programa_articleData" item="v" key="k"}
-		    <a href="/app/websitewap/websitewap?pid={$v.pid}&paid={$v.id}" class="weui-media-box weui-media-box_appmsg">
+		    <a href="/app/Websitewap/websitewap?pid={$v.pid}&paid={$v.id}" class="weui-media-box weui-media-box_appmsg">
 		      	<div class="weui-media-box__bd">
 		        	<h4 class="weui-media-box__title">{$v.title}</h4>
-		        	<p class="weui-media-box__desc">
-		        		<span class="cTime">{$v.ctime|date="Y-m-d",###}</span>
-					</p>
-		      	</div>
-		      	<div class="weui-media-box__hd">
-		        	<img class="weui-media-box__thumb" src="{$v.cover_path}">
 		      	</div>
 		    </a>
 		    {/foreach}
+		     <!-- 分页 -->
+			{$data.programa_articleData->render()}
+			
 		    {/if}
+
 		</div>
 
 	</div>
