--- a/application/index/view/Index/index.html
+++ b/application/index/view/Index/index.html
@@ -20,7 +20,7 @@
 						{foreach name="data.hotData" item="v" key="k"}
 					<div class="oneBox_body_list">
 						<div class="yd">·</div>
-						<div class="oneBox_body_list_bd"><a href="/Websitewap/websitewap?type={$v.type}&paid={$v.id}" target="_blank">{$v.title}</a></div>
+						<div class="oneBox_body_list_bd"><a href="/Websitewap/websitewap?pid={$v.pid}&paid={$v.id}" target="_blank">{$v.title}</a></div>
 					</div>
 					{/foreach}
 					{/if}
@@ -70,7 +70,7 @@
 			<div class="col-md-3 oneBox_left">
 				<div class="oneBox_title">
 					<span class="oneBox_title_bd">重庆MBA活动预告</span>
-					<a href="/Message/message?pid={$v.id}" class="rt" target="_blank">更多></a>
+					<a href="/Message/message?type=5" class="rt" target="_blank">更多></a>
 				</div>
 				<div class="oneBox_title_img">
 					<!-- 此处为广告位置 -->
@@ -101,16 +101,10 @@
 			<div class="col-md-6 oneBox_center">
 				<!-- 招生咨询 -->
 				<div class="col-md-12">
-					{if $data.programaData}
-					{foreach name="data.programaData" item="v" key="k"}
-					{if condition="($k == 7)"}
 					<div class="oneBox_title">
-						<span class="oneBox_title_bd">{$v.cname}</span>
-						<a href="/Message/message?pid={$v.id}" class="rt" target="_blank">更多></a>
+						<span class="oneBox_title_bd">招生资讯</span>
+						<a href="/Message/message?type=7" class="rt" target="_blank">更多></a>
 					</div>
-					{/if}
-					{/foreach}
-					{/if}
 					<div class="oneBox_body ">
 						<div class="weui-panel__bd">
 							{if $data.recruitData}
@@ -135,16 +129,12 @@
 				</div>
 				<!-- 考试咨询 -->
 				<div class="col-md-12">
-					{if $data.programaData}
-					{foreach name="data.programaData" item="v" key="k"}
-					{if condition="($k == 8)"}
+
 					<div class="oneBox_title">
-						<span class="oneBox_title_bd">{$v.cname}</span>
-						<a href="/Message/message?pid={$v.id}" class="rt" target="_blank">更多></a>
+						<span class="oneBox_title_bd">考试资讯</span>
+						<a href="/Message/message?type=8" class="rt" target="_blank">更多></a>
 					</div>
-					{/if}
-					{/foreach}
-					{/if}
+
 					<div class="oneBox_body ">
 						<div class="weui-panel__bd">
 							{if $data.examData}
@@ -371,7 +361,7 @@
 			<div class="col-md-4">
 					<div class="oneBox_title">
 							<span class="oneBox_title_bd">{$vv.cname}</span>
-							<a href="/Message/message?pid={$vv.id}&cname={$vv.cname}" class="rt" target="_blank">更多></a>
+							<a href="/Message/message?pid={$vv.id}" class="rt" target="_blank">更多></a>
 					</div>
 					<div class="oneBox_body">
 					<div class="oneBox_body_list_access">
