--- a/application/index/view/Layouts/right_aside.html
+++ b/application/index/view/Layouts/right_aside.html
@@ -8,16 +8,12 @@
 			<div class="oneBox_right col-md-12">
 					<!-- 招考广告 -->
 					<div class="col-md-12 pad0">
-						{if $data.programaData}
-						{foreach name="data.programaData" item="v" key="k"}
-						{if condition="($k == 4)"}
+
 					<div class="oneBox_title">
-						<span class="oneBox_title_bd">{$v.cname}</span>
-						<a href="/Message/message?pid={$v.id}" class="rt" target="_blank">更多></a>
+						<span class="oneBox_title_bd">招考广告</span>
+						<a href="/Message/message?type=4" class="rt" target="_blank">更多></a>
 					</div>
-					{/if}
-					{/foreach}
-					{/if}
+
 						<div class="oneBox_body">
 							{if $data.announcementData}
 							{foreach name="data.announcementData" item="v" key="k"}
@@ -73,16 +69,12 @@
 					<div class="h24"></div>
 					<!-- 院校推荐 -->
 					<div class="col-md-12">
-						{if $data.programaData}
-							{foreach name="data.programaData" item="v" key="k"}
-							{if condition="($k == 6)"}
+
 						<div class="oneBox_title">
-							<span class="oneBox_title_bd">{$v.cname}</span>
-							<a href="/Message/message?pid={$v.id}" class="rt" target="_blank">更多></a>
+							<span class="oneBox_title_bd">院校推荐</span>
+							<a href="/Message/message?type=6" class="rt" target="_blank">更多></a>
 						</div>
-						{/if}
-						{/foreach}
-						{/if}
+		
 						<div class="oneBox_body">
 							{if $data.recommendData}
 							{foreach name="data.recommendData" item="v" key="k"}
