--- a/application/index/view/Websitewap/websitewap.html
+++ b/application/index/view/Websitewap/websitewap.html
@@ -7,11 +7,8 @@
 		<!-- <p>您的位置 : <a href="/Index/index" target="_blank">首页</a>><a href="#" class="cname"></a></p> -->
 		<ol class="breadcrumb">
 		  <li><a href="/">首页</a></li>
-		  {if condition="($type neq 0 && $paid eq 0)"}
-		  <li class="active">{$data.programaCname}</li>
-		  {/if}
-		  {if condition="($paid && $type)"}
-		  <li><a href="/Message/message?type={$type}">{$data.programaCname}</a></li>
+		  {if condition="($pid)"}
+		  <li><a href="/Message/message?pid={$pid}">{$data.programaCname}</a></li>
 		  <li class="active">{$data.programa_articleTitle}</li>
 		  {/if}
 		</ol>
