--- a/public/static/app/layouts/css/layouts.css
+++ b/public/static/app/layouts/css/layouts.css
@@ -1,6 +1,7 @@
 
 body{font-family: 'Microsoft YaHei';}
 li,ul,ol{list-style-type:none;}
+a:hover{text-decoration: none;}
 .header{width: 100%;}
 img{width: 100%;height: 100%;}
 .weui-flex__item img{padding:.3rem; }
@@ -19,7 +20,7 @@ img{width: 100%;height: 100%;}
 .posR{position: relative;}
 .expand-list{height:2.8rem;margin-bottom: 0;}
 .expand{height: auto;}
-.toggle-area{position: absolute;;bottom: 0;right: 0;width: 76px;height: 29px;color: #fff;
+.toggle-area{position: absolute;;bottom: 0;right: 0;width: 85px;height: 29px;color: #fff;
 	z-index: 10;background-color: #333;text-align: center;line-height: 29px;}
 
 .expand-list li{width: 25%;float: left;padding: .25rem;font-size: 12px;text-align: center;}
@@ -33,3 +34,4 @@ img{width: 100%;height: 100%;}
 	border-right: 1px solid #fff;width: 33.333%;padding: 0;}
 .sub_footer a.weui-tabbar__item:nth-child(3){border-right: 0;}
 .h20{width: 100%;height: 2rem;clear: both;font-size: 0;display: block;}
+.weui-footer{padding-top: 1rem;}
