--- a/public/static/app/websitewap/css/websitewap.css
+++ b/public/static/app/websitewap/css/websitewap.css
@@ -3,3 +3,4 @@
 .title-box{color: #999;text-align: center;padding-bottom: .5rem;border-bottom: 1px dashed #ddd;}
 .content-box{padding: .5rem 0;	}
 .content-box p{text-indent: 1rem;}
+.webstyle{width: 40%;overflow: hidden;height: 1rem;text-overflow: ellipsis;white-space: nowrap;}
