--- a/application/app/view/websitewap/websitewap.html
+++ b/application/app/view/websitewap/websitewap.html
@@ -8,7 +8,7 @@
         <div class="span6">
             <ul class="breadcrumb">
                 <li>
-                    <a href="/app/index/index">首页</a>
+                    <a href="/app/Index/index">首页</a>
                 </li>
                 {if condition="($pid)"}
                   <li><a href="/app/Message/message?pid={$pid}">{$data.programaCname}</a></li>
