--- a/application/index/view/Layouts/header.html
+++ b/application/index/view/Layouts/header.html
@@ -33,10 +33,10 @@
         <div class="top-nav-index">
             <div class="top-list top-list_left">
                 <a href="/Base/aboutUs" target="_blank" >关于我们</a>
-                <a href="/Base/sitemap" target="_blank" >网站导航</a>
+                <a href="/Base/sitemap" target="_blank" >网站地图</a>
             </div>
             <div class="top-list textR">
-                <a href="/admin" title="院校登录" target="_blank">院校登陆</a>
+                <a href="/admin" title="院校登录" target="_blank">院校登录</a>
                 <a href="#" id="favorites" title="#">加入收藏</a>
             </div>
         </div>
