--- a/application/app/view/layouts/footer.html
+++ b/application/app/view/layouts/footer.html
@@ -13,9 +13,11 @@
 <div class="h20"></div>
 <!-- 固定底部 -->
 <div class="sub_footer">
-    <a href="javascript:;" class="weui-tabbar__item weui-bar__item--on">在线咨询</a>
-    <a href="javascript:;" class="weui-tabbar__item">拨打电话</a>
+    {if $data.websiteData}
+    <a href="http://wpa.qq.com/msgrd?v=3&uin={$data.websiteData.service_qq}&site=oicqzone.com&menu=yes" class="weui-tabbar__item">在线咨询</a>
+    <a href="wtai://wp/ap;{$data.websiteData.service_tel}" class="weui-tabbar__item">拨打电话</a>
     <a href="/app/Index/index" class="weui-tabbar__item">返回首页</a>
+    {/if}
 </div>
 
 
