--- a/application/app/view/message/message.html
+++ b/application/app/view/message/message.html
@@ -8,10 +8,8 @@
             <ul class="breadcrumb">
                 <li>
                     <a href="/app/index/index">首页</a>
-                </li>
-                {if condition="($pid)"}
-                  <li><a href="/app/Message/message?pid={$pid}">{$data.programaCname}</a></li>
-                  {/if}
+                </li>	
+                <li class="active">{$data.programaCname}</li>
             </ul>
     </div>
 	<div class="weui-search-bar" id="searchBar">
