--- a/application/app/view/sitemap/aboutUs.html
+++ b/application/app/view/sitemap/aboutUs.html
@@ -5,7 +5,7 @@
 <div class="span6">
             <ul class="breadcrumb">
                 <li>
-                    <a href="/app/index/index">首页</a>
+                    <a href="/app/Index/index">首页</a>
                 </li>
                   <li><a href="#" class="active">关于我们</a></li>
             </ul>
